@@ -14,6 +14,7 @@ v8.0.26
 - WL#14542: Deprecate TLS 1.0 and 1.1
 - WL#14440: Support for authentication_kerberos_client authentication plugin
 - WL#14237: Support query attributes
+- BUG#32623479: The X DevAPI returns str for binary types values
 
 v8.0.25
 =======
